...
            "state" : "translated",
            "value" : "Çŕášĥ ŕéƥóŕţíñĝ çóñšéñţ ŕéqúéšţ one two three"
          }
        }
      }
    },
    "Create" : {
      "localizations" : {
        "en-XA" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Çŕéáţé one"
          }
...
            "state" : "translated",
            "value" : "Šóúŕçé: %@ one"
          }
        }
      }
    },
    "Sources" : {
      "localizations" : {
        "en-XA" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Šóúŕçéš one"
          }
...
